<?xml version="1.0"?>
<package format="2">
  <name>c1t_rplidar_driver</name>
  <version>0.0.0</version>
  <description>The c1t_rplidar_driver package</description>

  <maintainer email="carma@dot.gov">CARMA</maintainer>
  <author>Adam Morrissett</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cav_driver_utils</depend>
  <depend>cav_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>roscpp</depend>
  <depend>rplidar_ros</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
